fix .name [class] on mobile devices

--- a/src/App.css
+++ b/src/App.css
@@ -197,7 +197,7 @@ li {
   }
 
   .name {
-    font-size: 2.5em;
+    font-size: normal;
   }
 
   #aboutContainer {
